src/parser/parser.rs
//! Реализация парсера с рекурсивным спуском для языка MiniC

use crate::common::position::Position;
use crate::common::token::{Token, TokenKind};
use crate::parser::ast::*;
use crate::parser::error::{ParseError, ParseErrorKind, ParseErrors, ParseResult};

/// Парсер с рекурсивным спуском для языка MiniC
pub struct Parser {
    /// Входной поток токенов
    tokens: Vec<Token>,
    /// Текущая позиция в потоке токенов
    current: usize,
    /// Собранные ошибки
    errors: ParseErrors,
    /// Флаг для восстановления после ошибок
    in_error_recovery: bool,
    /// Глубина рекурсии (для предотвращения переполнения стека)
    recursion_depth: usize,
    /// Максимальная глубина рекурсии
    max_recursion_depth: usize,
    /// Счетчик попыток восстановления
    recovery_attempts: usize,
}

impl Parser {
    /// Создает новый парсер из списка токенов
    pub fn new(tokens: Vec<Token>) -> Self {
        Self {
            tokens,
            current: 0,
            errors: ParseErrors::new(),
            in_error_recovery: false,
            recursion_depth: 0,
            max_recursion_depth: 1000,
            recovery_attempts: 0,
        }
    }

    /// Устанавливает максимальное количество ошибок
    pub fn with_max_errors(mut self, max: usize) -> Self {
        self.errors = self.errors.with_max_errors(max);
        self
    }

    /// Устанавливает максимальную глубину рекурсии
    pub fn with_max_recursion_depth(mut self, depth: usize) -> Self {
        self.max_recursion_depth = depth;
        self
    }

    /// Возвращает собранные ошибки
    pub fn errors(&self) -> &ParseErrors {
        &self.errors
    }

    /// Возвращает метрики ошибок
    pub fn error_metrics(&self) -> &crate::parser::error::ErrorMetrics {
        &self.errors.metrics
    }

    /// Добавляет ошибку
    pub fn add_error(&mut self, error: ParseError) {
        self.errors.add(error);
    }

    /// Основной метод разбора - парсит всю программу
    pub fn parse(&mut self) -> Option<Program> {
        let start_pos = self.current_position();
        let mut declarations = Vec::new();

        while !self.is_at_end() && !self.errors.reached_limit() {
            if matches!(self.peek().kind, TokenKind::RBrace) {
                let pos = self.current_position();
                let suggestion =
                    "Проверьте, нет ли лишней закрывающей скобки или не хватает открывающей";

                self.errors.add(
                    ParseError::new(pos, ParseErrorKind::UnexpectedToken)
                        .with_found(self.peek().lexeme.clone())
                        .with_message(
                            "неожиданная закрывающая скобка на верхнем уровне".to_string(),
                        )
                        .with_suggestion(suggestion.to_string()),
                );
                self.advance();
                continue;
            }

            match self.parse_declaration() {
                Ok(decl) => {
                    declarations.push(decl);
                }
                Err(e) => {
                    self.errors.add(e);

                    if !self.advanced_synchronize() {
                        break;
                    }
                }
            }
        }

        if declarations.is_empty()
            && self.errors.has_fatal()
            && self.errors.metrics.actual_errors > 0
        {
            None
        } else {
            Some(Program::new(declarations, start_pos.line, start_pos.column))
        }
    }

    /// Возвращает текущий токен без потребления
    pub fn peek(&self) -> &Token {
        &self.tokens[self.current]
    }

    /// Возвращает предыдущий токен
    pub fn previous(&self) -> &Token {
        &self.tokens[self.current - 1]
    }

    /// Проверяет, достигнут ли конец файла
    pub fn is_at_end(&self) -> bool {
        self.peek().kind == TokenKind::EndOfFile
    }

    /// Возвращает текущую позицию
    pub fn current_position(&self) -> Position {
        self.peek().position.clone()
    }

    /// Проверяет, совпадает ли текущий токен с ожидаемым типом
    pub fn check(&self, kind: &TokenKind) -> bool {
        if self.is_at_end() {
            false
        } else {
            std::mem::discriminant(&self.peek().kind) == std::mem::discriminant(kind)
        }
    }

    /// Проверяет, совпадает ли текущий токен с любым из ожидаемых типов
    pub fn check_any(&self, kinds: &[TokenKind]) -> bool {
        kinds.iter().any(|kind| self.check(kind))
    }

    /// Потребляет текущий токен, если он совпадает с ожидаемым типом
    pub fn match_token(&mut self, kind: &TokenKind) -> bool {
        if self.check(kind) {
            self.advance();
            true
        } else {
            false
        }
    }

    /// Потребляет текущий токен, если он совпадает с любым из ожидаемых типов
    pub fn match_any(&mut self, kinds: &[TokenKind]) -> bool {
        for kind in kinds {
            if self.check(kind) {
                self.advance();
                return true;
            }
        }
        false
    }

    /// Переходит к следующему токену
    pub fn advance(&mut self) -> &Token {
        if !self.is_at_end() {
            self.current += 1;
        }
        self.previous()
    }

    /// Потребляет текущий токен или сообщает об ошибке
    pub fn consume(
        &mut self,
        kind: &TokenKind,
        error_kind: ParseErrorKind,
        message: &str,
    ) -> ParseResult<&Token> {
        if self.check(kind) {
            Ok(self.advance())
        } else {
            let pos = self.current_position();
            let found = self.peek().lexeme.clone();

            if self.try_phrase_level_recovery(kind, &found) {
                Ok(self.previous())
            } else {
                let suggestion = match error_kind {
                    ParseErrorKind::MissingSemicolon => {
                        Some("Попробуйте добавить ';' в конце инструкции".to_string())
                    }
                    ParseErrorKind::MissingOpenParen => Some("Попробуйте добавить '('".to_string()),
                    ParseErrorKind::MissingCloseParen => {
                        Some("Попробуйте добавить ')'".to_string())
                    }
                    ParseErrorKind::MissingOpenBrace => {
                        Some("Попробуйте добавить '{{' в начале блока".to_string())
                    }
                    ParseErrorKind::MissingCloseBrace => {
                        Some("Попробуйте добавить '}}' в конце блока".to_string())
                    }
                    _ => None,
                };

                Err(ParseError::new(pos, error_kind)
                    .with_found(found)
                    .with_message(message.to_string())
                    .with_suggestion(suggestion.unwrap_or_default()))
            }
        }
    }

    /// Пытается восстановиться на уровне фразы (вставка/удаление токенов)
    fn try_phrase_level_recovery(&mut self, expected_kind: &TokenKind, found: &str) -> bool {
        self.recovery_attempts += 1;

        if self.recovery_attempts > 10 {
            return false;
        }

        match expected_kind {
            TokenKind::Semicolon => {
                if !self.is_at_end() {
                    let next = self.peek();
                    match &next.kind {
                        TokenKind::KwIf
                        | TokenKind::KwWhile
                        | TokenKind::KwFor
                        | TokenKind::KwReturn
                        | TokenKind::KwFn
                        | TokenKind::KwStruct
                        | TokenKind::RBrace => {
                            self.errors.metrics.mark_recovered();
                            return true;
                        }
                        _ => {}
                    }
                }
                false
            }

            TokenKind::RParen => {
                if found == ")" {
                    self.advance();
                    self.errors.metrics.mark_recovered();
                    true
                } else if matches!(self.peek().kind, TokenKind::LBrace | TokenKind::Semicolon) {
                    self.errors.metrics.mark_recovered();
                    true
                } else {
                    false
                }
            }

            TokenKind::RBrace => {
                if matches!(self.peek().kind, TokenKind::EndOfFile) {
                    self.errors.metrics.mark_recovered();
                    true
                } else {
                    false
                }
            }

            _ => false,
        }
    }

    /// Продвинутая синхронизация с несколькими стратегиями
    fn advanced_synchronize(&mut self) -> bool {
        self.in_error_recovery = true;
        self.recovery_attempts = 0;

        let mut synchronized = false;
        let mut tokens_skipped = 0;
        let max_skip = 20;

        while !self.is_at_end() && tokens_skipped < max_skip {
            if self.is_sync_point() {
                synchronized = true;
                break;
            }
            self.advance();
            tokens_skipped += 1;
        }

        if !synchronized && !self.is_at_end() {
            synchronized = self.try_insert_missing_tokens();
        }

        self.in_error_recovery = false;

        if synchronized {
            self.errors.metrics.mark_recovered();
        }

        synchronized && !self.is_at_end()
    }

    /// Проверяет, является ли текущая позиция точкой синхронизации
    pub fn is_sync_point(&self) -> bool {
        if self.is_at_end() {
            return true;
        }

        match &self.peek().kind {
            TokenKind::Semicolon => true,

            TokenKind::KwFn | TokenKind::KwStruct => true,

            TokenKind::KwIf
            | TokenKind::KwWhile
            | TokenKind::KwFor
            | TokenKind::KwReturn
            | TokenKind::LBrace
            | TokenKind::RBrace => true,

            TokenKind::RParen | TokenKind::Comma => true,

            _ => false,
        }
    }

    /// Пытается вставить недостающие токены для восстановления
    fn try_insert_missing_tokens(&mut self) -> bool {
        let current = self.peek().clone();

        match &current.kind {
            TokenKind::RBrace => {
                self.advance();
                true
            }

            TokenKind::RParen => {
                if self.current + 1 < self.tokens.len() {
                    let next = &self.tokens[self.current + 1];
                    match &next.kind {
                        TokenKind::Semicolon | TokenKind::RParen | TokenKind::Comma => {
                            self.advance();
                            return true;
                        }
                        _ => {}
                    }
                }
                false
            }

            kind if Self::is_operator(kind) => true,

            _ => false,
        }
    }

    /// Проверяет, является ли токен оператором
    fn is_operator(kind: &TokenKind) -> bool {
        matches!(
            kind,
            TokenKind::Plus
                | TokenKind::Minus
                | TokenKind::Asterisk
                | TokenKind::Slash
                | TokenKind::Percent
                | TokenKind::EqEq
                | TokenKind::BangEq
                | TokenKind::Lt
                | TokenKind::LtEq
                | TokenKind::Gt
                | TokenKind::GtEq
                | TokenKind::AmpAmp
                | TokenKind::PipePipe
                | TokenKind::Eq
                | TokenKind::PlusEq
                | TokenKind::MinusEq
                | TokenKind::AsteriskEq
                | TokenKind::SlashEq
        )
    }

    pub fn parse_declaration(&mut self) -> ParseResult<Declaration> {
        self.recursion_depth += 1;
        if self.recursion_depth > self.max_recursion_depth {
            self.recursion_depth -= 1;
            return Err(
                ParseError::new(self.current_position(), ParseErrorKind::SyntaxError)
                    .with_message("Превышена максимальная глубина рекурсии".to_string()),
            );
        }

        let result = match &self.peek().kind {
            TokenKind::KwFn => Ok(Declaration::Function(self.parse_function_decl()?)),
            TokenKind::KwExtern => {
                let start_pos = self.current_position();
                self.advance();

                if self.check(&TokenKind::KwFn) {
                    let func = self.parse_function_decl()?;
                    Ok(Declaration::ExternFunction(ExternFunctionDecl::new(
                        func.name.clone(),
                        func.return_type.clone(),
                        func.parameters.clone(),
                        func.is_variadic,
                        start_pos.line,
                        start_pos.column,
                    )))
                } else {
                    let return_type = self.parse_type()?;
                    let name = match self.advance() {
                        token if matches!(token.kind, TokenKind::Identifier(_)) => {
                            token.lexeme.clone()
                        }
                        token => {
                            return Err(ParseError::new(
                                token.position.clone(),
                                ParseErrorKind::ExpectedToken,
                            )
                            .with_found(token.lexeme.clone())
                            .with_suggestion("ожидалось имя функции".to_string()));
                        }
                    };

                    self.consume(
                        &TokenKind::LParen,
                        ParseErrorKind::MissingOpenParen,
                        "ожидалось '('",
                    )?;
                    let parameters = self.parse_param_list()?;
                    let is_variadic = self.match_token(&TokenKind::Ellipsis);
                    self.consume(
                        &TokenKind::RParen,
                        ParseErrorKind::MissingCloseParen,
                        "ожидалось ')'",
                    )?;

                    if self.check(&TokenKind::Semicolon) {
                        self.advance();
                    }

                    Ok(Declaration::ExternFunction(ExternFunctionDecl::new(
                        name,
                        return_type,
                        parameters,
                        is_variadic,
                        start_pos.line,
                        start_pos.column,
                    )))
                }
            }
            TokenKind::KwStruct => Ok(Declaration::Struct(self.parse_struct_decl()?)),
            _ => {
                if self.is_type_start() {
                    let start_pos = self.current_position();
                    let typ = self.parse_type()?;
                    let name = match self.peek() {
                        token if matches!(token.kind, TokenKind::Identifier(_)) => {
                            let n = token.lexeme.clone();
                            self.advance();
                            n
                        }
                        token => {
                            return Err(ParseError::new(
                                token.position.clone(),
                                ParseErrorKind::ExpectedToken,
                            )
                            .with_found(token.lexeme.clone())
                            .with_suggestion("ожидалось имя переменной или функции".to_string()));
                        }
                    };

                    if self.check(&TokenKind::LParen) {
                        self.advance();
                        let parameters = self.parse_param_list()?;
                        let is_variadic = self.match_token(&TokenKind::Ellipsis);
                        self.consume(
                            &TokenKind::RParen,
                            ParseErrorKind::MissingCloseParen,
                            "ожидалось ')'",
                        )?;

                        let body = self.parse_block()?;

                        Ok(Declaration::Function(FunctionDecl::new(
                            name,
                            typ,
                            parameters,
                            body,
                            is_variadic,
                            start_pos.line,
                            start_pos.column,
                        )))
                    } else {
                        let var_decl = self.parse_var_decl_after_type(typ, name, start_pos)?;
                        Ok(Declaration::Variable(var_decl))
                    }
                } else {
                    let pos = self.current_position();
                    Err(ParseError::new(pos, ParseErrorKind::SyntaxError)
                        .with_found(self.peek().lexeme.clone())
                        .with_message(
                            "ожидалось объявление функции, структуры или переменной".to_string(),
                        ))
                }
            }
        };

        self.recursion_depth -= 1;
        result
    }

    /// Парсит оставшуюся часть объявления переменной (после типа и имени)
    pub fn parse_var_decl_after_type(
        &mut self,
        var_type: Type,
        name: String,
        start_pos: Position,
    ) -> ParseResult<VarDecl> {
        let full_type = if self.check(&TokenKind::LBracket) {
            self.advance();
            let size = if let TokenKind::IntLiteral(s) = self.peek().kind {
                self.advance();
                Some(s)
            } else {
                None
            };
            self.consume(
                &TokenKind::RBracket,
                ParseErrorKind::MissingCloseParen,
                "ожидалось ']'",
            )?;
            Type::Array(Box::new(var_type), size)
        } else {
            var_type
        };

        let initializer = if self.match_token(&TokenKind::Eq) {
            if self.check(&TokenKind::LBrace) {
                let init = self.parse_array_initializer()?;
                Some(Expression::ArrayInitializer(init))
            } else {
                let expr = self.parse_expression()?;
                Some(expr)
            }
        } else {
            None
        };

        if self.check(&TokenKind::Semicolon) {
            self.advance();
            Ok(VarDecl::new(
                full_type,
                name,
                initializer,
                start_pos.line,
                start_pos.column,
            ))
        } else if self.check(&TokenKind::RBrace) && initializer.is_none() {
            Ok(VarDecl::new(
                full_type,
                name,
                initializer,
                start_pos.line,
                start_pos.column,
            ))
        } else {
            let pos = self.current_position();
            let error = ParseError::new(pos.clone(), ParseErrorKind::MissingSemicolon)
                .with_found(self.peek().lexeme.clone())
                .with_suggestion("Добавьте ';' в конце объявления переменной".to_string());
            self.errors.add(error);
            self.errors.metrics.mark_recovered();
            Ok(VarDecl::new(
                full_type,
                name,
                initializer,
                start_pos.line,
                start_pos.column,
            ))
        }
    }

    /// Проверяет, начинается ли токен с типа
    pub fn is_type_start(&self) -> bool {
        matches!(
            &self.peek().kind,
            TokenKind::KwInt
                | TokenKind::KwFloat
                | TokenKind::KwBool
                | TokenKind::KwVoid
                | TokenKind::KwString
                | TokenKind::KwChar
                | TokenKind::KwStruct
        ) || {
            if let TokenKind::Identifier(name) = &self.peek().kind {
                name == "var"
            } else {
                false
            }
        }
    }

    /// Парсит объявление функции: fn name(params) -> Type { ... }
    pub fn parse_function_decl(&mut self) -> ParseResult<FunctionDecl> {
        let start_pos = self.current_position();

        self.consume(
            &TokenKind::KwFn,
            ParseErrorKind::ExpectedToken,
            "ожидалось 'fn'",
        )?;

        let name = match self.advance() {
            token if matches!(token.kind, TokenKind::Identifier(_)) => token.lexeme.clone(),
            token => {
                return Err(
                    ParseError::new(token.position.clone(), ParseErrorKind::ExpectedToken)
                        .with_found(token.lexeme.clone())
                        .with_suggestion("Имя функции должно быть идентификатором".to_string()),
                );
            }
        };

        self.consume(
            &TokenKind::LParen,
            ParseErrorKind::MissingOpenParen,
            "ожидалось '(' после имени функции",
        )?;

        let parameters = self.parse_param_list()?;

        if name == "main" && !parameters.is_empty() {
            return Err(
                ParseError::new(start_pos, ParseErrorKind::InvalidFunctionDecl)
                    .with_message("Функция main не может иметь параметров".to_string())
                    .with_suggestion("Удалите параметры у функции main".to_string()),
            );
        }

        let is_variadic = self.match_token(&TokenKind::Ellipsis);

        self.consume(
            &TokenKind::RParen,
            ParseErrorKind::MissingCloseParen,
            "ожидалось ')' после параметров",
        )?;

        let return_type = if self.match_token(&TokenKind::Arrow) {
            self.parse_type()?
        } else {
            Type::Void
        };

        let body_result = self.parse_block();

        match body_result {
            Ok(body) => Ok(FunctionDecl::new(
                name,
                return_type,
                parameters,
                body,
                is_variadic,
                start_pos.line,
                start_pos.column,
            )),
            Err(e) => {
                self.errors.add(e);

                let dummy_body = BlockStmt::new(Vec::new(), start_pos.line, start_pos.column);
                Ok(FunctionDecl::new(
                    name,
                    return_type,
                    parameters,
                    dummy_body,
                    is_variadic,
                    start_pos.line,
                    start_pos.column,
                ))
            }
        }
    }

    /// Парсит список параметров функции
    pub fn parse_param_list(&mut self) -> ParseResult<Vec<Param>> {
        let mut params = Vec::new();

        if self.check(&TokenKind::RParen) || self.check(&TokenKind::Ellipsis) {
            return Ok(params);
        }

        match self.parse_param() {
            Ok(param) => params.push(param),
            Err(e) => {
                self.errors.add(e);
                if !self.advanced_synchronize() {
                    return Ok(params);
                }
            }
        }

        while self.match_token(&TokenKind::Comma) {
            if self.check(&TokenKind::Ellipsis) {
                break;
            }
            if self.check(&TokenKind::RParen) {
                break;
            }

            match self.parse_param() {
                Ok(param) => params.push(param),
                Err(e) => {
                    self.errors.add(e);
                    while !self.is_at_end()
                        && !self.check(&TokenKind::Comma)
                        && !self.check(&TokenKind::RParen)
                        && !self.check(&TokenKind::Ellipsis)
                    {
                        self.advance();
                    }
                }
            }
        }

        Ok(params)
    }

    /// Парсит один параметр: Type name
    pub fn parse_param(&mut self) -> ParseResult<Param> {
        let start_pos = self.current_position();
        let mut param_type = self.parse_type()?;

        while self.match_token(&TokenKind::Asterisk) {
            param_type = Type::Pointer(Box::new(param_type));
        }

        let name = match self.advance() {
            token if matches!(token.kind, TokenKind::Identifier(_)) => token.lexeme.clone(),
            token => {
                return Err(
                    ParseError::new(token.position.clone(), ParseErrorKind::ExpectedToken)
                        .with_found(token.lexeme.clone())
                        .with_suggestion("Имя параметра должно быть идентификатором".to_string()),
                );
            }
        };

        if self.match_token(&TokenKind::LBracket) {
            self.consume(
                &TokenKind::RBracket,
                ParseErrorKind::MissingCloseParen,
                "ожидалось ']'",
            )?;
            param_type = Type::Array(Box::new(param_type), None);
        }

        Ok(Param::new(
            param_type,
            name,
            start_pos.line,
            start_pos.column,
        ))
    }

    /// Парсит объявление структуры: struct Name { fields }
    pub fn parse_struct_decl(&mut self) -> ParseResult<StructDecl> {
        let start_pos = self.current_position();

        self.consume(
            &TokenKind::KwStruct,
            ParseErrorKind::ExpectedToken,
            "ожидалось 'struct'",
        )?;

        let name = match self.advance() {
            token if matches!(token.kind, TokenKind::Identifier(_)) => token.lexeme.clone(),
            token => {
                return Err(
                    ParseError::new(token.position.clone(), ParseErrorKind::ExpectedToken)
                        .with_found(token.lexeme.clone())
                        .with_suggestion("Имя структуры должно быть идентификатором".to_string()),
                );
            }
        };

        self.consume(
            &TokenKind::LBrace,
            ParseErrorKind::MissingOpenBrace,
            "ожидалось '{{' после имени структуры",
        )?;

        let mut fields = Vec::new();
        while !self.check(&TokenKind::RBrace) && !self.is_at_end() {
            match self.parse_var_decl() {
                Ok(field) => fields.push(field),
                Err(e) => {
                    self.errors.add(e);
                    while !self.is_at_end()
                        && !self.check(&TokenKind::RBrace)
                        && !self.check(&TokenKind::KwStruct)
                    {
                        self.advance();
                    }
                }
            }
        }

        self.consume(
            &TokenKind::RBrace,
            ParseErrorKind::MissingCloseBrace,
            "ожидалось '}}' в конце структуры",
        )?;

        if self.check(&TokenKind::Semicolon) {
            self.advance();
        }

        Ok(StructDecl::new(
            name,
            fields,
            start_pos.line,
            start_pos.column,
        ))
    }

    /// Парсит объявление переменной: Type name [= Expression];
    pub fn parse_var_decl(&mut self) -> ParseResult<VarDecl> {
        let start_pos = self.current_position();
        let var_type = self.parse_type()?;
        let name = match self.advance() {
            token if matches!(token.kind, TokenKind::Identifier(_)) => token.lexeme.clone(),
            token => {
                return Err(
                    ParseError::new(token.position.clone(), ParseErrorKind::ExpectedToken)
                        .with_found(token.lexeme.clone())
                        .with_suggestion("Имя переменной должно быть идентификатором".to_string()),
                );
            }
        };
        self.parse_var_decl_after_type(var_type, name, start_pos)
    }

    /// Парсит инициализатор массива: { expr, expr, ... }
    pub fn parse_array_initializer(&mut self) -> ParseResult<ArrayInitializerExpr> {
        let start_pos = self.current_position();

        self.consume(
            &TokenKind::LBrace,
            ParseErrorKind::MissingOpenBrace,
            "ожидалось '{' для инициализатора массива",
        )?;

        let mut elements = Vec::new();

        if !self.check(&TokenKind::RBrace) {
            loop {
                let elem = self.parse_expression()?;
                elements.push(elem);

                if !self.match_token(&TokenKind::Comma) {
                    break;
                }

                if self.check(&TokenKind::RBrace) {
                    break;
                }
            }
        }

        self.consume(
            &TokenKind::RBrace,
            ParseErrorKind::MissingCloseBrace,
            "ожидалось '}' в конце инициализатора массива",
        )?;

        Ok(ArrayInitializerExpr::new(
            elements,
            start_pos.line,
            start_pos.column,
        ))
    }

    pub fn parse_type(&mut self) -> ParseResult<Type> {
        let token = self.peek().clone();
        let pos = token.position.clone();

        let mut typ = match &token.kind {
            TokenKind::KwInt => {
                self.advance();
                Type::Int
            }
            TokenKind::KwFloat => {
                self.advance();
                Type::Float
            }
            TokenKind::KwBool => {
                self.advance();
                Type::Bool
            }
            TokenKind::KwVoid => {
                self.advance();
                Type::Void
            }
            TokenKind::KwString => {
                self.advance();
                Type::String
            }
            TokenKind::KwChar => {
                self.advance();
                Type::Char
            }
            TokenKind::Identifier(name) if name == "var" => {
                self.advance();
                Type::Inferred
            }
            TokenKind::KwStruct => {
                self.advance();
                match self.peek() {
                    token if matches!(token.kind, TokenKind::Identifier(_)) => {
                        let name = token.lexeme.clone();
                        self.advance();
                        Type::Struct(name)
                    }
                    token => {
                        return Err(ParseError::new(
                            token.position.clone(),
                            ParseErrorKind::ExpectedToken,
                        )
                        .with_found(token.lexeme.clone())
                        .with_suggestion(
                            "После 'struct' должно следовать имя структуры".to_string(),
                        ));
                    }
                }
            }
            _ => {
                return Err(
                    ParseError::new(pos, ParseErrorKind::UnknownType)
                        .with_found(token.lexeme)
                        .with_suggestion("Используйте один из встроенных типов: int, float, bool, void, string, char, struct Имя, или var".to_string()),
                );
            }
        };

        while self.match_token(&TokenKind::Asterisk) {
            typ = Type::Pointer(Box::new(typ));
        }

        while self.match_token(&TokenKind::LBracket) {
            let size = if let TokenKind::IntLiteral(s) = self.peek().kind {
                self.advance();
                Some(s)
            } else {
                None
            };
            self.consume(
                &TokenKind::RBracket,
                ParseErrorKind::MissingCloseParen,
                "ожидалось ']'",
            )?;
            typ = Type::Array(Box::new(typ), size);
        }

        Ok(typ)
    }

    /// Парсит инструкцию
    pub fn parse_statement(&mut self) -> ParseResult<Statement> {
        self.recursion_depth += 1;
        if self.recursion_depth > self.max_recursion_depth {
            self.recursion_depth -= 1;
            return Err(
                ParseError::new(self.current_position(), ParseErrorKind::SyntaxError)
                    .with_message("Превышена максимальная глубина рекурсии".to_string()),
            );
        }

        let result = match &self.peek().kind {
            TokenKind::KwIf => Ok(Statement::If(self.parse_if_stmt()?)),
            TokenKind::KwWhile => Ok(Statement::While(self.parse_while_stmt()?)),
            TokenKind::KwFor => Ok(Statement::For(self.parse_for_stmt()?)),
            TokenKind::KwReturn => Ok(Statement::Return(self.parse_return_stmt()?)),
            TokenKind::LBrace => Ok(Statement::Block(self.parse_block()?)),
            TokenKind::KwBreak => {
                self.advance();
                let pos = self.previous().position.clone();
                if self.check(&TokenKind::Semicolon) {
                    self.advance();
                }
                Ok(Statement::Break(BreakStmt::new(pos.line, pos.column)))
            }
            TokenKind::KwContinue => {
                self.advance();
                let pos = self.previous().position.clone();
                if self.check(&TokenKind::Semicolon) {
                    self.advance();
                }
                Ok(Statement::Continue(ContinueStmt::new(pos.line, pos.column)))
            }
            TokenKind::KwSwitch => Ok(Statement::Switch(self.parse_switch_stmt()?)),
            TokenKind::Semicolon => {
                self.advance();
                Ok(Statement::Empty(EmptyStmt::new(
                    self.current_position().line,
                    self.current_position().column,
                )))
            }
            _ => {
                if self.is_type_start() {
                    Ok(Statement::VariableDecl(self.parse_var_decl()?))
                } else {
                    let expr_stmt = self.parse_expr_stmt()?;
                    Ok(Statement::Expression(expr_stmt))
                }
            }
        };

        self.recursion_depth -= 1;
        result
    }

    /// Парсит инструкцию-выражение: Expression;
    pub fn parse_expr_stmt(&mut self) -> ParseResult<ExprStmt> {
        let start_pos = self.current_position();
        let expr = self.parse_expression()?;

        if self.check(&TokenKind::Semicolon) {
            self.advance();
            Ok(ExprStmt::new(expr, start_pos.line, start_pos.column))
        } else if self.check(&TokenKind::RBrace) || self.is_at_end() {
            Ok(ExprStmt::new(expr, start_pos.line, start_pos.column))
        } else {
            let pos = self.current_position();
            let error = ParseError::new(pos.clone(), ParseErrorKind::MissingSemicolon)
                .with_found(self.peek().lexeme.clone())
                .with_suggestion("Добавьте ';' в конце инструкции".to_string());
            self.errors.add(error);
            self.errors.metrics.mark_recovered();

            Ok(ExprStmt::new(expr, start_pos.line, start_pos.column))
        }
    }

    /// Парсит блок: { statements }
    pub fn parse_block(&mut self) -> ParseResult<BlockStmt> {
        self.recursion_depth += 1;
        if self.recursion_depth > self.max_recursion_depth {
            self.recursion_depth -= 1;
            return Err(
                ParseError::new(self.current_position(), ParseErrorKind::SyntaxError).with_message(
                    "Превышена максимальная глубина рекурсии при разборе блока".to_string(),
                ),
            );
        }

        let start_pos = self.current_position();

        if !self.check(&TokenKind::LBrace) {
            let pos = self.current_position();
            let found = self.peek().lexeme.clone();
            let error = ParseError::new(pos, ParseErrorKind::MissingOpenBrace)
                .with_found(found)
                .with_suggestion("Добавьте '{{' в начале блока".to_string());

            self.recursion_depth -= 1;
            return Err(error);
        }
        self.advance();

        let mut statements = Vec::new();
        let mut iteration_count = 0;
        let max_iterations = 10000;

        while !self.check(&TokenKind::RBrace)
            && !self.is_at_end()
            && iteration_count < max_iterations
        {
            iteration_count += 1;

            match self.parse_statement() {
                Ok(stmt) => statements.push(stmt),
                Err(e) => {
                    self.errors.add(e);
                    if !self.advanced_synchronize() {
                        break;
                    }
                }
            }
        }

        if iteration_count >= max_iterations {
            self.recursion_depth -= 1;
            return Err(
                ParseError::new(self.current_position(), ParseErrorKind::SyntaxError).with_message(
                    "Превышено максимальное количество инструкций в блоке".to_string(),
                ),
            );
        }
